fix Voigtländer update

--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ base:
   input_dir: ./input
   output_dir: ./output
   quality: 100
-  special_font: ./fonts/Rilastail-wo3GP.ttf
+  special_font: ./fonts/Kalam-Regular.ttf
   special_font_size: 1
 global:
   focal_length:
